tests/fixtures/invalid/pow_bool_int_str.py
# Cannot call pow() with Bool, Int, Str
x = pow(True, 1, "hello")
